# model-zoo-asr

./: API.md  CMakeLists.txt  NOTICE  README.md  package.xml
.github/workflows/: code-style.yml
cmake/: FetchQwen3AsrModel.cmake  FetchSenseVoiceModel.cmake  FetchZipformerModel.cmake
examples/: asr_file_demo.cpp  asr_stream_demo.cpp
include/: asr_service.h
python/: asr_bindings.cpp  pyproject.toml  setup.py
python/examples/: asr_file_demo.py  asr_stream_demo.py
python/spacemit_asr/: __init__.py  callback.py  engine.py  stream.py  utils.py
src/: asr.hpp  asr_adapter.cpp  asr_callback.hpp  asr_config.hpp  asr_engine.cpp  asr_engine.hpp  asr_presets.cpp  asr_types.hpp  model_downloader.cpp  model_downloader.hpp
src/backends/: asr_backend.hpp
src/backends/qwen3_asr/: qwen3_asr_backend.cpp  qwen3_asr_backend.hpp
src/backends/sensevoice/: asr_model.cpp  audio_processor.cpp  feature_extractor.cpp  feature_extractor.hpp  hotword_scorer.cpp  hotword_scorer.hpp  model_downloader.cpp  model_loader.cpp  model_loader.hpp  onnx_compat.hpp  sensevoice.hpp  sensevoice_backend.cpp  sensevoice_backend.hpp  sensevoice_model.cpp  sensevoice_model.hpp  tokenizer.cpp  tokenizer.hpp
src/backends/zipformer/: zipformer_backend.cpp  zipformer_backend.hpp  zipformer_ctc_decoder.h  zipformer_ctc_model.cpp  zipformer_ctc_model.h  zipformer_feature_extractor.cpp  zipformer_feature_extractor.h  zipformer_symbol_table.h
