[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cmake>=3.18",
]
build-backend = "setuptools.build_meta"

[project]
name = "spacemit_asr"
version = "1.0.0"
description = "Space ASR (Automatic Speech Recognition) Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "muggle", email = "mingjun.rong@spacemit.com"}
]
keywords = ["asr", "speech recognition", "sensevoice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "scipy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/muggle/asr"
